editing by the navigator: Nashat

--- a/index.html
+++ b/index.html
@@ -1,116 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Choclate Pizza</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <header>
-      <div id="headlogo">
-        <img id="logo" src="img/logo.png" alt="main logo" />
-        <article>
-          <h1>Delicious</h1>
-          <p>THE BEST FOOD BLOG ON THE WEB</p>
-        </article>
-      </div>
-      <div id="contactlogo">
-        <img src="img/fb-icon.png" alt="fb" /><img
-          src="img/twit-icon.png"
-          alt="twt"
-        /><img src="img/gp-icon.png" alt="gp" /><img
-          src="img/insta-icon.png"
-          alt="ins"
-        /><img src="img/flic-icon.png" alt="flick" /><img
-          src="img/pint-icon.png"
-          alt="pint"
-        /><img src="img/rss-icon.png" alt="rss" /><img
-          src="img/mail-icon.png"
-          alt="mail"
-        />
-      </div>
-    </header>
-    <main>
-      <div id="hr1"><hr /></div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Choclate Pizza</title>
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+  <header>
+    <div id="headlogo">
+      <img id="logo" src="img/logo.png" alt="main logo" />
       <article>
-        <div>
-          <h2>Cocolate pizza</h2>
-          <p>POSTED ON 15DEC2013/ DESSERTS</p>
+        <h1>Delicious</h1>
+        <p>THE BEST FOOD BLOG ON THE WEB</p>
+      </article>
+    </div>
+    <div id="contactlogo">
+      <img src="img/fb-icon.png" alt="fb" /><img src="img/twit-icon.png" alt="twt" /><img src="img/gp-icon.png"
+        alt="gp" /><img src="img/insta-icon.png" alt="ins" /><img src="img/flic-icon.png" alt="flick" /><img
+        src="img/pint-icon.png" alt="pint" /><img src="img/rss-icon.png" alt="rss" /><img src="img/mail-icon.png"
+        alt="mail" />
+    </div>
+  </header>
+  <main>
+    <div id="hr1">
+      <hr />
+    </div>
+    <article>
+      <div>
+        <h2>Choclate pizza</h2>
+        <p>POSTED ON 15 DEC 2013 /DESSERTS</p>
+      </div>
+      <p id="printP">PRINT</p>
+      <img id="print" src="img/print-icon.png" alt="print" />
+    </article>
+    <img id="cho" src="img/choco-pizza.png" alt="cho" />
+    <div id="par">
+      <p id="p">
+        &emsp;&emsp;Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Cupiditate odio ipsa beatae eius voluptates, culpa minima molestias
+        temporibus, laborum, voluptatibus rem consequatur porro! Eius
+        repudiandae, quae similique rem voluptatem assumenda.
+      </p>
+      <br />
+      <p>
+        &emsp;&emsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem totam
+        esse, asperiores vitae fugiat libero ea in fuga sapiente ipsam
+        adipisci nobis voluptas? Fuga tenetur aut, quidem fugiat voluptatibus
+        commodi.
+      </p>
+      <br />
+      <p>
+        &emsp;&emsp;Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat id
+        corrupti voluptate rem debitis dignissimos deleniti quasi harum quos,
+        quidem delectus cumque unde perferendis porro accusamus inventore
+        placeat, in recusandae.
+      </p>
+      <br />
+    </div>
+    <div>
+      <img id="listimg" src="img/list-bg.png" alt="list" />
+    </div>
+    <div>
+      <form>
+        <div id="left">
+          <input type="checkbox" /><label>11/2 cups milk </label><br />
+          <input type="checkbox" /><label>1/2 cup mascarpon </label><br />
+          <input type="checkbox" /><label>1/2 tsp pink salt </label><br />
+          <input type="checkbox" /><label>1 lb black mission figs </label><br />
+          <input type="checkbox" /><label>1/2 cup brown sugar </label><br />
+          <input type="checkbox" /><label>2-4 Tbsp water </label><br />
         </div>
-        <img id="print" src="img/print-icon.png" alt="print" />
-      </article>
-      <img id="cho" src="img/choco-pizza.png" alt="cho" />
-      <div id="par">
-        <p id="p">
-          &emsp;&emsp;Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Cupiditate odio ipsa beatae eius voluptates, culpa minima molestias
-          temporibus, laborum, voluptatibus rem consequatur porro! Eius
-          repudiandae, quae similique rem voluptatem assumenda.
-        </p>
-        <br />
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem totam
-          esse, asperiores vitae fugiat libero ea in fuga sapiente ipsam
-          adipisci nobis voluptas? Fuga tenetur aut, quidem fugiat voluptatibus
-          commodi.
-        </p>
-        <br />
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat id
-          corrupti voluptate rem debitis dignissimos deleniti quasi harum quos,
-          quidem delectus cumque unde perferendis porro accusamus inventore
-          placeat, in recusandae.
-        </p>
-        <br />
-      </div>
-      <div>
-        <img id="listimg" src="img/list-bg.png" alt="list" />
-      </div>
-      <div>
-        <form>
-          <div id="left">
-            <label>11/2 cups milk </label><input type="checkbox" /><br />
-            <label>1/2 cup mascarpon </label><input type="checkbox" /><br />
-            <label>1/2 tsp pink salt </label><input type="checkbox" /><br />
-            <label>1 lb black mission figs </label
-            ><input type="checkbox" /><br />
-            <label>1/2 cup brown sugar </label><input type="checkbox" /><br />
-            <label>2-4 Tbsp water </label><input type="checkbox" /><br />
-          </div>
 
-          <div id="right">
-            <label>11/2 cups milk </label><input type="checkbox" /><br />
-            <label>1/2 cup mascarpon </label><input type="checkbox" /><br />
-            <label>1/2 tsp pink salt </label><input type="checkbox" /><br />
-            <label>1 lb black mission figs </label
-            ><input type="checkbox" /><br />
-            <label>1/2 cup brown sugar </label><input type="checkbox" /><br />
-            <label>2-4 Tbsp water </label><input type="checkbox" /><br />
-          </div>
-        </form>
+        <div id="right">
+          <input type="checkbox" /><label>11/2 cups milk </label><br />
+          <input type="checkbox" /><label>1/2 cup mascarpon </label><br />
+          <input type="checkbox" /><label>1/2 tsp pink salt </label><br />
+          <input type="checkbox" /><label>1 lb black mission figs </label><br />
+          <input type="checkbox" /><label>1/2 cup brown sugar </label><br />
+          <input type="checkbox" /><label>2-4 Tbsp water </label><br />
+        </div>
+      </form>
+    </div>
+    <div id="footer">
+      <hr id="hr2" />
+      <img src="img/van-pic.png" alt="van" />
+      <h3 id="vanName">vanessa stevenson</h3>
+      <p id="vanP">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+        aut reprehenderit, sint recusandae
+      </p>
+      <button>SHARE RECIP</button>
+    </div>
+  </main>
+  <footer>
+    <article>
+      <img id="slogo" src="img/small-logo.png" alt="logo2" />
+      <div>
+        <hr id="hr3" />
       </div>
-      <div id="footer">
-        <hr id="hr2" />
-        <img src="img/van-pic.png" alt="van" />
-        <h3>vanessa stevenson</h3>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur
-          aut reprehenderit, sint recusandae
-        </p>
-        <button>SHARE RECIP</button>
-      </div>
-    </main>
-    <footer>
-      <article>
-        <img id="slogo" src="img/small-logo.png" alt="logo2" />
-        <div><hr id="hr3" /></div>
 
-        <p>DELICIOUS &COPY; 2013 RIGHT RESERVED</p>
-        <p>PROUDLY PUPLISHED WITH GHOST</p>
-      </article>
-    </footer>
-  </body>
+      <p id="fp1">DELICIOUS &COPY; 2013 RIGHTS RESERVED</p>
+      <p id="fp2">PROUDLY PUPLISHED WITH GHOST</p>
+    </article>
+  </footer>
+</body>
+
 </html>
